import ExploreSectionTitleTestCases from "../ExploreSectionTitleTestCases";
import testRunner from "../../../../Services/testRunner/testRunner";

ExploreSectionTitleTestCases.map(testRunner);
